--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
 
             <section class="offer">
                 <div class="offer__content container">
-                    <p>Пройдите опрос и получите стоимость Вашего проекта, а также <span>беслпатный бонус</span> при
+                    <p>Пройдите опрос и получите стоимость Вашего проекта, а также <span>бесплатный бонус</span> при
                         заказе сайта
                     </p>
                     <button class="button" onclick="window.location.href='#quiz'">Узнать стоимость</button>
@@ -137,7 +137,7 @@
                             <span>Легко продвигать</span>
                         </div>
                         <div class="pluses__back">
-                            На сайте уже настроена базовай поисковая оптимизация. При необходимости ее возможно
+                            На сайте уже настроена базовая поисковая оптимизация. При необходимости ее возможно
                             расширить и улучшить.
                         </div>
                     </li>
@@ -317,8 +317,8 @@
                                 <li>Базовую настройку для <span>поисковой оптимизации</span> под такие поисковые системы
                                     как
                                     Яндекс и Google;</li>
-                                <li><span>Обучающее видео</span> раобте в админке сайта;</li>
-                                <li>Будут становлены счетчики систем аналитики <span>Яндекс.Метрика</span>
+                                <li><span>Обучающее видео</span> работе в админке сайта;</li>
+                                <li>Будут установлены счетчики систем аналитики <span>Яндекс.Метрика</span>
                                     и <span>Google Analytics</span>;
                                 </li>
                                 <li>Регистрация и подключение <span>домена</span>;</li>
@@ -332,7 +332,7 @@
 
             <section class="offer">
                 <div class="offer__content container">
-                    <p>Узнайте сроки и стоимость создания Вашего сайта, а также получите <span>беслпатный бонус</span>
+                    <p>Узнайте сроки и стоимость создания Вашего сайта, а также получите <span>бесплатный бонус</span>
                         при создании сайта</p>
                     <button class="button" onclick="window.location.href='#quiz'">Пройти опрос</button>
                 </div>
@@ -341,7 +341,7 @@
             <section class="advantages" id="advantages">
 
                 <div class="advantages__info container">
-                    <h2 class="advantages__title">Какие Вы получите преимущества от нашего сотруднечества?</h2>
+                    <h2 class="advantages__title">Какие Вы получите преимущества от нашего сотрудничества?</h2>
                     <ul class="advantages__items">
                         <li class="advantages__item">
                             <h3>Экономия Ваших средств</h3>
@@ -353,21 +353,21 @@
                         <li class="advantages__item">
                             <h3>Скорость разработки</h3>
                             <p>Проект создается и запускается в кратчайшие сроки. Все работы по созданию и настройке
-                                сата
+                                сайта
                                 делаю
                                 сам, без посредников</p>
                         </li>
                         <li class="advantages__item">
                             <h3>Адаптивный сайт под любые устройства</h3>
-                            <p>Корректное отбражение Вашего сайта на любых устройства: ПК, смартфоны, планшеты</p>
+                            <p>Корректное отображение Вашего сайта на любых устройства: ПК, смартфоны, планшеты</p>
                         </li>
                         <li class="advantages__item">
                             <h3>Работа по договору</h3>
-                            <p>Отбражую все условия в догоре и четко им следую</p>
+                            <p>Отображу все условия в договоре и четко им следую</p>
                         </li>
                         <li class="advantages__item">
                             <h3>Поддержка</h3>
-                            <p>После завершения проекта я не пропадаю. Всегда рад дальнейем сотруднечеству и
+                            <p>После завершения проекта я не пропадаю. Всегда рад дальнейшем сотрудничеству и
                                 развитию Вашего
                                 сайта</p>
                         </li>
@@ -399,7 +399,7 @@
                             <p>Создаем ТЗ согласно Ваших пожеланий и идей</p>
                         </li>
                         <li class="stages__item">
-                            <h3>Аналатика</h3>
+                            <h3>Аналитика</h3>
                             <p>Я анализирую сайты в Вашей сфере и разрабатываю структуру лендинга</p>
                         </li>
                         <li class="stages__item">
@@ -420,7 +420,7 @@
 
             <section class="offer">
                 <div class="offer__content container">
-                    <p>Для предварительного расчета стоимоти Вашего сайта пройдите короткий опрос и получите
+                    <p>Для предварительного расчета стоимости Вашего сайта пройдите короткий опрос и получите
                         <span>бонус</span> при заказе сайта
                     </p>
                     <button class="button" onclick="window.location.href='#quiz'">Пройти опрос</button>
@@ -495,7 +495,7 @@
                 <div class="bottom-form__content">
                     <form action="POST">
                         <h4>Остались вопросы? </h4>
-                        <p>Оставте свой контакты и мы связемся с Вами в ближайшее
+                        <p>Оставьте свой контакты и мы свяжемся с Вами в ближайшее
                             время</p>
                         <fieldset>
                             <input type="text" placeholder="Имя" name="name">
@@ -514,7 +514,7 @@
         <div class="popup">
             <div class="popup__content">
                 <form action="POST">
-                    <h2>Мы связемся с Вами в ближайшее
+                    <h2>Мы свяжемся с Вами в ближайшее
                         время</h2>
                     <fieldset>
                         <input type="text" placeholder="Имя" name="name">
