--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
                 <ul class="pluses__content container">
                     <li>
                         <div class="pluses__front">
-                            <div class="pluses__image"><img src="img/edit.png" alt="Экономия"></div>
+                            <div class="pluses__image"><img src="img/edit.svg" alt="Экономия"></div>
                             <span>Легко редактировать</span>
                         </div>
                         <div class="pluses__back">
@@ -123,7 +123,7 @@
                     </li>
                     <li>
                         <div class="pluses__front">
-                            <div class="pluses__image"><img src="img/add.png" alt="Экономия"></div>
+                            <div class="pluses__image"><img src="img/add.svg" alt="Экономия"></div>
                             <span>Легко расширять</span>
                         </div>
                         <div class="pluses__back">
@@ -133,7 +133,7 @@
                     </li>
                     <li>
                         <div class="pluses__front">
-                            <div class="pluses__image"><img src="img/seo.png" alt="Экономия"></div>
+                            <div class="pluses__image"><img src="img/seo.svg" alt="Экономия"></div>
                             <span>Легко продвигать</span>
                         </div>
                         <div class="pluses__back">
@@ -143,7 +143,7 @@
                     </li>
                     <li>
                         <div class="pluses__front">
-                            <div class="pluses__image"><img src="img/security.png" alt="Экономия"></div>
+                            <div class="pluses__image"><img src="img/security.svg" alt="Экономия"></div>
                             <span>Высокая безопасность</span>
                         </div>
                         <div class="pluses__back">
@@ -272,7 +272,7 @@
                                         <label for="name">Ваше имя</label>
                                         <input type="text" name="name" placeholder="Имя" maxlength="30">
                                         <label for="tel">Телефон</label>
-                                        <input type="text" name="tel" placeholder="Телефон" maxlength="30">
+                                        <input type="text" name="tel" placeholder="8 (999) 999-9999" maxlength="30">
                                     </div>
                                 </fieldset>
                             </div>
@@ -498,8 +498,8 @@
                         <p>Оставьте свой контакты и мы свяжемся с Вами в ближайшее
                             время</p>
                         <fieldset>
-                            <input type="text" placeholder="Имя" name="name">
-                            <input type="text" placeholder="Телефон*" name="tel">
+                            <input type="text" placeholder="Имя" name="name" maxlength="30">
+                            <input type="text" placeholder="8 (999) 999 99 99*" name="tel">
                         </fieldset>
                         <button class="button">Отправить</button>
                     </form>
@@ -517,8 +517,8 @@
                     <h2>Мы свяжемся с Вами в ближайшее
                         время</h2>
                     <fieldset>
-                        <input type="text" placeholder="Имя" name="name">
-                        <input type="text" placeholder="Телефон*" name="tel">
+                        <input type="text" placeholder="Имя" name="name" maxlength="30">
+                        <input type="text" placeholder="Телефон" name="tel">
                     </fieldset>
                     <button class="button">Отправить</button>
                 </form>
